--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-validator": "^6.14.0",
     "google-auth-library": "^7.14.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.9"
+    "mongoose": "5",
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "morgan": "^1.10.0"
